Added a new AuthService

--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SQLServerConnection": "User ID=postgres;Password=12345678;Host=localhost;Port=5432;Database=Book;"
+    "SQLServerConnection": "User ID=postgres;Password=12345678;Host=localhost;Port=5432;Database=Users;"
   },
   "AllowedOrigins": [
     "http://localhost:5173",
